--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col-md-4 col-xl-2 mt-4">
-                    <a href="#reserveForm" role="button" class="btn btn-lg btn-info">Reserve Campsite</a>
+                    <a href="#reserveForm" role="button" class="btn btn-lg btn-info text-nowrap">Reserve Campsite</a>
                 </div>
             </div>
         </div>
