--- a/index.html
+++ b/index.html
@@ -211,14 +211,9 @@
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
-                <div class="btn-group" id="carouselButton">
-                    <button class="btn btn-danger btn-sm" id="carouselPause">
+                    <button class="btn btn-danger btn-sm" id="carouselButton">
                         <i class="fa fa-pause"></i>
                     </button>
-                    <button class="btn btn-danger btn-sm" id="carouselPlay">
-                        <i class="fa fa-play"></i>
-                    </button>
-                </div>
             </div>
         </div>
 
@@ -295,14 +290,19 @@
 
         <script>
             $(function() {
-                $(".carousel").carousel( { interval: 2000 } );
-                $("#carouselPause").click(function(){
+            $(".carousel").carousel( { interval: 2000 } );
+            $("#carouselButton").click(function(){
+                if ($("#carouselButton").children("i").hasClass("fa-pause")) {
                     $(".carousel").carousel("pause");
-                });
-                $("#carouselPlay").click(function(){
+                    $("#carouselButton").children("i").removeClass("fa-pause");
+                    $("#carouselButton").children("i").addClass("fa-play");
+                } else {
                     $(".carousel").carousel("cycle");
-                });
+                    $("#carouselButton").children("i").removeClass("fa-play");
+                    $("#carouselButton").children("i").addClass("fa-pause"); 
+                }
             });
+        });
         </script>
 
 </body>
