NPM Scripts Part 2

--- a/aboutus.html
+++ b/aboutus.html
@@ -9,11 +9,13 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
 
-    <!-- Additional CSS must be placed after Bootstrap CSS -->
+    <!-- build:css css/main.css -->
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
     <link rel="stylesheet" href="css/styles.css" />
+    <!-- endbuild -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
 
     <title>NuCamp: A Better Way To Camp</title>
 </head>
@@ -160,7 +162,7 @@
                         <div role="tab" class="card-header">
                             <h4>
                                 <a class="collapsed" data-toggle="collapse" data-target="#node">
-                                    Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small>
+                                    Node Outdoor Apparel <small>Outdoor Clothes [&] Shoes</small>
                                 </a>
                             </h4>
                             <div class="collapse" id="node" data-parent="#accordion">
@@ -213,7 +215,7 @@
             </div>
         </div>
     </div>
-    </div>
+   
 
     <footer class="site-footer">
         <div class="container">
@@ -249,9 +251,12 @@
     </footer>
 
     <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
+    <!-- build:js js/main.js -->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="js/scripts.js"></script>
+    <!-- endbuild -->
 
 </body>
 
